--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <div class="container">
-    <% flash.each do |key, value| %>
+    <% flash.each do |key, value| %> <!-- looping through flash message code in contacts cotroller -->
     <%= content_tag :div, value, class: "alert alert-#{key}" %>
     <% end %>
     <%= yield %>
