--- a/app/views/contact_mailer/contact_mailer.html.erb
+++ b/app/views/contact_mailer/contact_mailer.html.erb
@@ -3,7 +3,9 @@
   <head>
   </head>
   <body>
-    <p>You have received a message from the site's contact form, from <%= "#{ @name }, #{ @email }." %> </p>
-    <p> <%= @body %>
+    
+    <p>You have received a message from the site's contact form, from <%= "#{ @name }, #{ @email }." %></p>
+    <p><%= @body %></p>
+      
   </body>
 </html> 
