--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
         </div>
 
         <div class="actions form-group">
-          <%= f.submit "Sign up", class:'btn btn-success form-group' %>
+          <%= f.submit "Sign up", class:'btn btn-success' %>
         </div>
       <% end %>
 
