--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
       <div class="well">
         <h2 class="text-center">Pro Membership</h2>
         <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
-        <%= link_to "Sign up with Pro", new_user_registration_path, class: "btn btn-primary btn-block btn-lg" %>
+        <%= link_to "Sign up with Pro", new_user_registration_path, class: "btn btn-success btn-block btn-lg" %>
       </div>
     </div>
 </div>
