--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Dev match</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= stylesheet_include_tag 'https://js.stripe.com/v2/' %>
+  <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
   <%= tag :meta, :name => 'stripe-key', :content => STRIPE_PUBLIC_KEY %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
