Made corrections to index and show page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -13,4 +13,10 @@
   }
   
 }
-
+/* Users Index Page Styles */
+.user-index-avatar {
+  border-radius: 50%;
+}
+.well.white-bg {
+  background-color: white;
+}
