--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <%= @user.profile.description %>
     </div> <!-- end of well -->
     
-    <% if true #current_user.plan_id == 2 %>
+    <% if current_user.plan_id == 2 %>
     <div class="well contact-info profile-block">
       <h3>Contact Info</h3>
       <%= @user.profile.phone_number %><br/>
