--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,11 +8,14 @@
 
 body {
   
-  background: -webkit-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #73C8A9 10%, #373B44 90%); /* W3C */
+  background: rgba(238,244,246,1);
+background: -moz-linear-gradient(left, rgba(238,244,246,1) 0%, rgba(214,223,230,1) 26%, rgba(177,195,205,1) 50%, rgba(200,217,227,1) 76%, rgba(221,237,248,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(238,244,246,1)), color-stop(26%, rgba(214,223,230,1)), color-stop(50%, rgba(177,195,205,1)), color-stop(76%, rgba(200,217,227,1)), color-stop(100%, rgba(221,237,248,1)));
+background: -webkit-linear-gradient(left, rgba(238,244,246,1) 0%, rgba(214,223,230,1) 26%, rgba(177,195,205,1) 50%, rgba(200,217,227,1) 76%, rgba(221,237,248,1) 100%);
+background: -o-linear-gradient(left, rgba(238,244,246,1) 0%, rgba(214,223,230,1) 26%, rgba(177,195,205,1) 50%, rgba(200,217,227,1) 76%, rgba(221,237,248,1) 100%);
+background: -ms-linear-gradient(left, rgba(238,244,246,1) 0%, rgba(214,223,230,1) 26%, rgba(177,195,205,1) 50%, rgba(200,217,227,1) 76%, rgba(221,237,248,1) 100%);
+background: linear-gradient(to right, rgba(238,244,246,1) 0%, rgba(214,223,230,1) 26%, rgba(177,195,205,1) 50%, rgba(200,217,227,1) 76%, rgba(221,237,248,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eef4f6', endColorstr='#ddedf8', GradientType=1 );
         
 }
 
